--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,9 +1,10 @@
 {
+    "references": [],
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
             "@/*": [
-                "src/*"
+                "./src/*"
             ]
         }
     }
